# Django-Project

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  run_tests.sh
.github/workflows/: django.yml
portfolio/: manage.py
portfolio/movies/: admin.py  models.py  serializers.py  urls.py  views.py
portfolio/movies/migrations/: 0001_initial.py
portfolio/portfolio/: asgi.py  settings.py  urls.py  wsgi.py
portfolio/settings/: base.py  tests.py
requirements/: requirements.txt
tests/movies/views/: test_author_viewset.py  test_movie_viewset.py
