[project]
name = "portfolio"
version = "0.2.0"

[project.scripts]
"manage.py" = "portfolio:manage"

[build-system]
requires = [
    "setuptools>=69.2.0",
]
build-backend = "setuptools.build_meta"

[tool.ruff]
exclude = ["*/migrations/*.py"]

[tool.ruff.lint]
select = [
    "F", 
    "C90", 
    "I",
    "N", 
    "UP", 
    "A", 
    "COM", 
    "C4", 
    "DJ", 
    "EXE", 
    "ISC", 
    "ICN", 
    "G", 
    "INP",
    "PIE",
    "T20",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SIM",
    "TID",
    "INT",
    "ARG",
    "PL",
    "TRY",
    "FLY",
    "PERF",
    "RUF"
]
ignore = ["RUF012", "TRY003"]

[tool.ruff.lint.extend-per-file-ignores]
"**/tests/**" = ["ARG001"]